[package]
authors = ["Terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
name = "yew-export-button"
repository = "https://github.com/Terkwood/yew-export-button"
version = "1.0.3-a"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.19"
js-sys = "0.3.57"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
yew = "0.19.3"
