[package]
authors = ["Terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
name = "yew-export-button"
repository = "https://github.com/Terkwood/yew-export-button"
version = "3.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.31"
js-sys = "0.3.65"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
yew = "0.21.0"
